# EdikyStudio

./: .gitignore  .yamllint.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  blank.md
.github/linters/: markdownlint.json  yamllint.yml
.github/workflows/: ci.yml  clang-tidy.yml  codeql.yml  format.yml  nightly.yml  release.yml  sanitizers.yml
